FIX: A little of label is visible on play button

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -24,9 +24,11 @@ main
       color             red
 
   #play
-    min-height          40rem
+    height              40rem
     max-width           160rem
+    width               100%
     min-width           40rem
+    padding             0
 
     background          none
     background-image    url('play-btn.png')
